# ontology-debt

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  models.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: gold-label-dispute.md
.github/workflows/: ci.yml  publish.yml
agent_commitments/: task_integrity.yaml
commitments/: causal_ordering.yaml  entity_persistence.yaml  negation_invariance.yaml  object_permanence.yaml  quantity_conservation.yaml  temporal_consistency.yaml
commitments-frontier/: compositional_causality.yaml  multihop_temporal.yaml  nested_negation.yaml  stacked_conservation.yaml
docs/: agent-audit.md  essay.md
examples/frontier-audit/: answers.json  ledger.json  models.yaml  report.md  run-frontier-clean-20260715T011106907Z.json  transcript-frontier-clean.jsonl
examples/gradient/: README.md  answers-claude-fable5.json  ledger.json  report.md  run-claude-fable5-20260715T021200682Z.json  run-gpt-4.1-mini-20260715T023714751Z.json  run-gpt-4o-mini-20260715T023831411Z.json  run-gpt-5-mini-20260715T023032501Z.json  run-gpt-5-nano-20260715T023353849Z.json  run-gpt-5.4-20260715T022839253Z.json  run-gpt-frontier-20260715T013500952Z.json  run-gpt-mini-20260715T020937924Z.json  run-gpt-nano-20260715T021044571Z.json  transcript-claude-fable5.jsonl  transcript-gpt-4.1-mini.jsonl  transcript-gpt-4o-mini.jsonl  transcript-gpt-5-mini.jsonl  transcript-gpt-5-nano.jsonl  transcript-gpt-5.4.jsonl  transcript-gpt-frontier.jsonl  transcript-gpt-mini.jsonl  transcript-gpt-nano.jsonl
examples/gradient-frontier/: ledger.json  report.md  run-claude-fable5-frontier-20260715T023944571Z.json  run-gpt-4.1-mini-20260715T025655566Z.json  run-gpt-4o-mini-20260715T025724711Z.json  run-gpt-5-mini-20260715T025248554Z.json  run-gpt-5-nano-20260715T025521382Z.json  run-gpt-5.4-20260715T025107231Z.json  run-gpt-frontier-20260715T023945147Z.json  run-gpt-mini-20260715T025205121Z.json  run-gpt-nano-20260715T025432926Z.json  transcript-claude-fable5-frontier.jsonl  transcript-gpt-4.1-mini.jsonl  transcript-gpt-4o-mini.jsonl  transcript-gpt-5-mini.jsonl  transcript-gpt-5-nano.jsonl  transcript-gpt-5.4.jsonl  transcript-gpt-frontier.jsonl  transcript-gpt-mini.jsonl  transcript-gpt-nano.jsonl
examples/mock-run/: README.md  ledger.json  (+4 more)
tests/: test_agent_audit.py  test_analysis.py  test_ledger.py  test_runner.py  test_schema.py
(+12 files in other folders)
