[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ontology-debt"
version = "0.1.0"
description = "Ontology Debt: audit an LLM's world-model against ontological commitments you declare - and track the debt. CLI: ontodebt."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Margaret (Maggie) Nanyonga" }]
keywords = ["llm", "evaluation", "ontology", "consistency", "world-model", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
all = ["anthropic>=0.40", "openai>=1.50"]
dev = ["pytest>=8.0", "anthropic>=0.40", "openai>=1.50"]

[project.scripts]
ontodebt = "ontodebt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ontodebt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
